--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,15 +9,20 @@ android {
             storePassword '123456'
         }
     }
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
     defaultConfig {
         applicationId "cn.dq.www.guangchangan"
         minSdkVersion 15
-        targetSdkVersion 22
+        targetSdkVersion 26
         versionCode 2
         versionName "2.0"
         signingConfig signingConfigs.config
+        javaCompileOptions {
+            annotationProcessorOptions {
+                includeCompileClasspath = true
+            }
+        }
     }
     buildTypes {
         release {
@@ -40,41 +45,49 @@ android {
         checkReleaseBuilds false
         abortOnError false
     }
-
     /**
      * 配置生成的apk打包的名称
      */
-    applicationVariants.all { variant ->
-        variant.outputs.each { output ->
-            def outputFile = output.outputFile
-            if (outputFile != null && outputFile.name.endsWith('.apk')) {
-                if (variant.buildType.name.equals('debug')) {
-                    def fileName = "tdz_debug.apk"
-                    output.outputFile = new File(outputFile.parent, fileName)
-                } else {
-                    // 输出apk名称为basketball.apk
-                    def fileName = "tdz_release.apk"
-                    output.outputFile = new File(outputFile.parent, fileName)
-                }
-            }
-        }
-    }
+//    applicationVariants.all { variant ->
+//        variant.outputs.each { output ->
+//            def outputFile = output.outputFile
+//            if (outputFile != null && outputFile.name.endsWith('.apk')) {
+//                if (variant.buildType.name.equals('debug')) {
+//                    def fileName = "tdz_debug.apk"
+//                    output.outputFile = new File(outputFile.parent, fileName)
+//                } else {
+//                    // 输出apk名称为basketball.apk
+//                    def fileName = "tdz_release.apk"
+//                    output.outputFile = new File(outputFile.parent, fileName)
+//                }
+//            }
+//        }
+//    }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    testCompile 'junit:junit:4.12'
-    compile 'com.jakewharton:butterknife:6.1.0'
-    compile 'com.android.support:design:23.0.1'
-    compile 'com.github.bumptech.glide:glide:3.6.1'
-    compile 'pub.devrel:easypermissions:0.1.9'
-    compile 'com.android.support:recyclerview-v7:23.0.1'
-    compile 'com.android.support:cardview-v7:23.0.1'
-    compile 'com.alibaba:fastjson:1.2.10'
-    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
-    compile 'com.squareup.retrofit2:converter-scalars:2.0.0'
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
-    compile 'com.android.support:percent:23.1.0'
+    api fileTree(include: ['*.jar'], dir: 'libs')
+    api 'com.android.support:appcompat-v7:28.0.0'
+    api 'com.jakewharton:butterknife:6.1.0'
+    api 'com.android.support:design:28.0.0'
+    api 'com.github.bumptech.glide:glide:3.6.1'
+    api 'com.android.support:recyclerview-v7:28.0.0'
+    api 'com.android.support:cardview-v7:28.0.0'
+    api 'com.alibaba:fastjson:1.2.10'
+    api 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
+    api 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+    api 'com.squareup.retrofit2:converter-scalars:2.0.0'
+    api 'com.squareup.okhttp3:okhttp:3.4.1'
+    api 'com.android.support:percent:28.0.0'
+
+    implementation 'cn.bmob.android:bmob-sdk:3.7.3-rc1'
+    implementation "io.reactivex.rxjava2:rxjava:2.2.2"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'com.squareup.okio:okio:2.1.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
+//    implementation 'cn.bmob.android:http-legacy:1.0'
+    api 'pub.devrel:easypermissions:0.4.3'
+
+
 }
