--- a/build.gradle
+++ b/build.gradle
@@ -3,19 +3,28 @@
 buildscript {
     repositories {
         jcenter()
+        google()
+        maven{
+            url "https://raw.github.com/bmob/bmob-android-sdk/master"
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.android.tools.build:gradle:3.4.0'
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
+
 }
 
 allprojects {
     repositories {
         jcenter()
+        google()
+
+        maven{
+            url "https://raw.github.com/bmob/bmob-android-sdk/master"
+        }
     }
+
 }
 
 task clean(type: Delete) {
