--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,9 @@ android {
 
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
+    //   引入android 注解 、代替广播，
+    api files('libs/eventbus.jar')
+
     api 'com.android.support:appcompat-v7:28.0.0'
     api 'com.jakewharton:butterknife:6.1.0'
     api 'com.android.support:design:28.0.0'
